<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".MainActivity"
    android:background="@color/black">

  <include layout="@layout/toolbar"
      android:id="@+id/Inclutoolbar"/>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/bg_round"
      android:padding="10dp"
      android:layout_marginTop="10dp">

    <TextView
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/txtpara"
        android:textSize="20sp"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/txtPara"
        android:layout_width="match_parent"
        android:hint="EJEMPLO: correo@gmail.com"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

  </LinearLayout>

  <EditText
      android:id="@+id/txtasunto"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:background="@drawable/bg_round"
      android:hint="@string/txtAsunto"
      android:padding="10dp"
      android:textColor="@color/white"
      android:textColorHint="@color/white"
      tools:ignore="TouchTargetSizeCheck" />

  <EditText
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:id="@+id/txtMensaje"
      android:hint="@string/txtmensaje"
      android:padding="10dp"
      android:gravity="top"
      android:textColor="@color/white"
      android:textColorHint="@color/white"
      android:layout_marginTop="10dp"
      android:background="@drawable/bg_round"/>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@android:color/transparent"
      android:padding="10dp">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="10dp"
        android:id="@+id/btnLimpiar"
        android:text="@string/limpiar"
        android:textColor="@color/white"
        android:layout_marginLeft="90dp"
        android:background="@drawable/boton"/>

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:textColor="@color/white"
        android:background="@drawable/boton"
        android:padding="10dp"
        android:text="@string/button" />
  </LinearLayout>

</LinearLayout>